--- a/sheet05/tus.ipynb
+++ b/sheet05/tus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,36 +11,49 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Nehme an, dass Zähörate der Protonen Poissonverteilung folgt:\\\n",
-    "$P(X=k) = \\frac{\\lambda^k}{k!}\\exp(-\\lambda) \\Rightarrow L=\\prod_i P(k_i,\\lambda)\\\\$\n",
-    "Negative-Log-Likelihood extremalisieren:\\\n",
-    "$F = -\\ln(L) =  \\Rightarrow \\frac{dF}{d\\lambda} = $\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wahrscheinlichste Zählrate: 4218.0\n"
+      "-0.39791561681440907\n"
      ]
     }
    ],
    "source": [
-    "counts = [4135, 4202, 4203, 4218, 4227, 4231, 4310]\n",
+    "g = 9.81\n",
+    "L = 45000/(28.9*10**(-3))\n",
+    "R_L = 287\n",
+    "R_W = 8.314\n",
+    "c_p = 1150\n",
+    "T = 270\n",
+    "p_w = 570\n",
+    "p = 85000\n",
+    "x = p_w/p\n",
     "\n",
-    "total_counts = sum(counts)\n",
-    "\n",
-    "lambda_mle = total_counts / len(counts)\n",
-    "\n",
-    "print(f\"Wahrscheinlichste Zählrate: {lambda_mle}\")"
+    "grad = -g*(1+x*L/(T*R_L))/(c_p+x*L**2/(R_W*T**2))\n",
+    "print(grad*1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-8.530434782608696\n"
+     ]
+    }
+   ],
+   "source": [
+    "grad_trocken = -g/c_p\n",
+    "print(grad_trocken*1000)"
    ]
   }
  ],
